Fix dark mode, update instructions.

--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,7 @@
 .controls {
   text-align: center;
 }
+
+.credits {
+  text-align: left;
+}
