--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,6 @@
   font-weight: 400;
   text-align: center;
 
-  color-scheme: light dark;
-  background-color: #ffffff;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
